--- a/vue/vueapp/package.json
+++ b/vue/vueapp/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vueapp",
+  "name": "app",
   "version": "1.0.0",
-  "description": "cb",
-  "author": "CB",
+  "description": "vue",
+  "author": "cb",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "axios": "^0.19.0",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
